--- a/MyTemplate.Web/bundleconfig.json
+++ b/MyTemplate.Web/bundleconfig.json
@@ -2,22 +2,28 @@
   {
     "outputFileName": "wwwroot/js/all.min.js",
     "inputFiles": [
+      "wwwroot/lib/jquery/dist/jquery.min.js",
       //#region for AdminLTE-master template js
-      "wwwroot/lib/plugins/jquery/jquery.min.js",
-      "wwwroot/lib/plugins/jquery-ui/jquery-ui.min.js",
-      "wwwroot/lib/plugins/bootstrap/js/bootstrap.bundle.min.js",
-      "wwwroot/lib/plugins/chart.js/Chart.min.js",
-      "wwwroot/lib/plugins/sparklines/sparkline.js",
-      "wwwroot/lib/plugins/jqvmap/jquery.vmap.min.js",
-      "wwwroot/lib/plugins/jqvmap/maps/jquery.vmap.usa.js",
-      "wwwroot/lib/plugins/jquery-knob/jquery.knob.min.js",
-      "wwwroot/lib/plugins/moment/moment.min.js",
-      "wwwroot/lib/plugins/daterangepicker/daterangepicker.js",
-      "wwwroot/lib/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js",
-      "wwwroot/lib/plugins/summernote/summernote-bs4.min.js",
-      "wwwroot/lib/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js",
-      "wwwroot/lib/dist/js/adminlte.js",
-      "wwwroot/lib/dist/js/pages/dashboard.js"
+      "wwwroot/lib/AdminLTE-master/plugins/jquery/jquery.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/jquery-ui/jquery-ui.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/bootstrap/js/bootstrap.bundle.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/chart.js/Chart.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/sparklines/sparkline.js",
+      "wwwroot/lib/AdminLTE-master/plugins/jqvmap/jquery.vmap.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/jqvmap/maps/jquery.vmap.usa.js",
+      "wwwroot/lib/AdminLTE-master/plugins/jquery-knob/jquery.knob.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/moment/moment.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/daterangepicker/daterangepicker.js",
+      "wwwroot/lib/AdminLTE-master/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/summernote/summernote-bs4.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/datatables/jquery.dataTables.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/datatables-responsive/js/dataTables.responsive.min.js",
+      "wwwroot/lib/AdminLTE-master/plugins/datatables-responsive/js/responsive.bootstrap4.min.js",
+      "wwwroot/lib/AdminLTE-master/dist/js/adminlte.js",
+      "wwwroot/lib/AdminLTE-master/dist/js/pages/dashboard.js",
+      "wwwroot/lib/AdminLTE-master/dist/js/demo.js"
       //#endregion
     ],
     "minify": {
@@ -31,13 +37,16 @@
     "inputFiles": [
       //#region for AdminLTE-master template css
       "wwwroot/lib/AdminLTE-master/plugins/fontawesome-free/css/all.min.css",
-      "wwwroot/lib/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css",
-      "wwwroot/lib/plugins/icheck-bootstrap/icheck-bootstrap.min.css",
-      "wwwroot/lib/plugins/jqvmap/jqvmap.min.css",
-      "wwwroot/lib/dist/css/adminlte.min.css",
-      "wwwroot/lib/plugins/overlayScrollbars/css/OverlayScrollbars.min.css",
-      "wwwroot/lib/plugins/daterangepicker/daterangepicker.css",
-      "wwwroot/lib/plugins/summernote/summernote-bs4.css"
+      "wwwroot/lib/AdminLTE-master/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css",
+      "wwwroot/lib/AdminLTE-master/plugins/icheck-bootstrap/icheck-bootstrap.min.css",
+      "wwwroot/lib/AdminLTE-master/plugins/jqvmap/jqvmap.min.css",
+      "wwwroot/lib/AdminLTE-master/dist/css/adminlte.min.css",
+      "wwwroot/lib/AdminLTE-master/plugins/overlayScrollbars/css/OverlayScrollbars.min.css",
+      "wwwroot/lib/AdminLTE-master/plugins/daterangepicker/daterangepicker.css",
+      "wwwroot/lib/AdminLTE-master/plugins/summernote/summernote-bs4.css",
+      "wwwroot/lib/AdminLTE-master/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css",
+      "wwwroot/lib/AdminLTE-master/plugins/datatables-responsive/css/responsive.bootstrap4.min.css",
+      "wwwroot/lib/AdminLTE-master/plugins/datatables-responsive/css/responsive.bootstrap4.min.css"
       //#endregion
     ]
   }
