--- a/MyTemplate.Web/MyTemplate.Web.csproj
+++ b/MyTemplate.Web/MyTemplate.Web.csproj
@@ -27,6 +27,8 @@
     <ProjectReference Include="..\MyTemplate.DAL\MyTemplate.DAL.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties bundleconfig_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 
 
 </Project>
